# pre-buddy

./: .gitignore  DESIGN.md  DESIGN_v0_openclaw_blend.md  README.md
.github/workflows/: ci.yml
docs/: README.md  embodiment.md  hardware-bringup.md  pairing.md  protocol.md  tutorial.md
firmware/: CMakeLists.txt  README.md
firmware/core/include/pre_buddy/: boot_flow.h  character.h  character_picker.h  character_store.h  expression.h  generated_event_kinds.h  led_palette.h  line_framer.h  motion.h  protocol.h  robot_loop.h  servo_math.h  sprite_atlas.h
firmware/core/include/pre_buddy/hal/: i_ble_transport.h  i_display.h  i_led.h  i_mic.h  i_servo.h  i_speaker.h  i_wake_detector.h  in_memory_character_store.h  mock.h  mock_audio.h  uuids.h
firmware/esp32/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/esp32/main/: CMakeLists.txt  esp32_audio_in.cpp  esp32_audio_in.h  esp32_ble.cpp  esp32_ble.h  esp32_buddy_config.cpp  esp32_buddy_config.h  esp32_character_store.cpp  esp32_character_store.h  esp32_display.cpp  esp32_display.h  esp32_led.cpp  esp32_led.h  esp32_mic.cpp  esp32_mic.h  esp32_servo.cpp  esp32_servo.h  esp32_speaker.cpp  esp32_speaker.h  esp32_wake_word.cpp  esp32_wake_word.h  idf_component.yml  main.cpp  sprites_data.h
firmware/test/: test_audio_hal.cpp  test_character.cpp  test_character_picker.cpp  test_character_store.cpp  test_driver_math.cpp  test_expression.cpp  test_hal_mock.cpp  test_harness.h  test_main.cpp  test_motion.cpp  test_protocol.cpp  test_robot_loop.cpp  test_sprite_atlas.cpp
launchers/: PRE Buddy Setup.bat  PRE Buddy Setup.command  PRE Buddy.bat  PRE Buddy.command  README.md  pre-buddy-setup.desktop  pre-buddy.desktop
server/: README.md  pyproject.toml
server/examples/: alerts_scenario.jsonl  daily_flow_scenario.jsonl  run_all.sh
server/pre_buddy/: __init__.py  audio_bridge.py  autostart.py  bridge.py  buddy.py  cli.py  config.py  conversation.py  events.py  generated_event_kinds.py  mock_robot.py  pump.py  serializer.py  serve.py  setup_wizard.py  simulate.py  transport.py  transport_ble.py  tray.py  uuids.py  viewer.py  voice_adapters.py
server/tests/: conftest.py  test_audio_bridge.py  test_audio_events.py  test_autostart.py  test_bridge.py  test_buddy.py  test_cli.py  test_config.py  test_conversation.py  test_events.py  test_generated_schema_sync.py  test_golden_scenarios.py  test_mock_robot.py  test_pump.py  test_serializer.py  test_serve.py  test_setup_wizard.py  test_transport.py  test_transport_ble.py  test_tray.py  test_viewer.py
server/tests/golden/: alerts_sentinel_loud.json  daily_sprout_normal.json
shared/protocol/: events.md  events.yaml  uuids.md
tools/: buddy_daemon.py  converse.py  generate_protocol_stubs.py  generate_sprites.py  install_idf.sh  live_bridge.py  provision_device.sh  sprites_to_header.py  test_brain.py
viewer/: index.html  viewer.css  viewer.js
