[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pre_buddy"
version = "0.1.0"
description = "PRE Buddy server — `pre buddy serve` subcommand (BLE NUS peripheral + pre.* event emitter)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "TBD" }
authors = [{ name = "Christopher Bradford" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]
# Real BLE/NUS transport (Slice 2). Optional so that the host-side test
# matrix stays installable without a bluetooth stack.
transport = ["bleak>=0.21"]
# Bridge subscriber (Slice 1). Lets the bridge connect to PRE's live WS.
bridge = ["websockets>=12"]

[project.scripts]
pre-buddy = "pre_buddy.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pre_buddy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
