[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pre_buddy"
version = "0.1.0"
description = "PRE Buddy server — `pre buddy serve` subcommand (BLE NUS peripheral + pre.* event emitter)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "TBD" }
authors = [{ name = "Christopher Bradford" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]
# Real BLE/NUS transport (Slice 2). Optional so that the host-side test
# matrix stays installable without a bluetooth stack.
transport = ["bleak>=0.21"]
# Bridge subscriber (Slice 1). Lets the bridge connect to PRE's live WS.
bridge = ["websockets>=12"]
# System tray app (Slice 4). pystray is the cross-platform tray library;
# Pillow loads the bundled icon. Both are optional so headless installs
# (e.g. CI workers, server bots) stay slim.
tray = ["pystray>=0.19", "Pillow>=10.0"]
# Voice / conversational loop (tools/converse.py). faster-whisper is the STT
# engine (CTranslate2, ~0.2s warm vs ~10s for the openai-whisper CLI, which is
# the fallback if faster-whisper is absent); numpy feeds it the PCM samples.
# macOS `say` provides TTS (no dep). Needs [transport,bridge] too for the BLE +
# PRE WS plumbing.
voice = ["faster-whisper>=1.0", "numpy>=1.24"]
# Everything needed for the full robot conversational loop in one extra.
robot = ["bleak>=0.21", "websockets>=12", "faster-whisper>=1.0", "numpy>=1.24"]

[project.scripts]
pre-buddy = "pre_buddy.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pre_buddy*"]

[tool.setuptools.package-data]
# Ship the tray icon PNG with the wheel so `pre-buddy tray` works after
# a plain `pip install pre_buddy[tray]`.
pre_buddy = ["assets/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
